<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PhysMotive</string>
    <string name="btnAddDiary">Add Diary Entry</string>
    <string name="btnAddActivity">Add Activity</string>
    <string name="btnSave">Save</string>
    <string name="btnUpdate">Update</string>
    <string name="btnCancel">Cancel</string>
    <string name="diaryTitle">Enter name of diary entry:</string>
    <string name="diaryHint">Name</string>
    <string name="nameOfDiary">Diary Name:</string>
    <string name="newActivityButtonName">New Activity</string>
    <string name="viewActivityButtonName">View Activity</string>
    <string name="mapButtonName">Map</string>
    <string name="diaryButtonName">Diary</string>
    <string name="statisticsButtonName">Statistics</string>
    <string name="settingsButtonName">Settings</string>
    <string name="newUserName">New User</string>
    <string name="distanceOrTimeToggleButtonOn">Distance</string>
    <string name="distanceOrTimeToggleButtonOff">Time</string>
    <string name="selectedDistanceOrTimeValue">min : sec</string>
    <string name="manualButtonText">Manual</string>
    <string name="automaticButtonText">Automatic</string>
    <string name="activityMenuGraph">Distance v Time Graph</string>
    <string name="numberOfRacesValue">#NA</string>
    <string name="totalTimeValue">#NA</string>
    <string name="totalDistanceValue">#NA</string>
    <string name="averageTimeValue">#NA</string>
    <string name="averageDistanceValue">#NA</string>
    <string name="statisticsProgressGraph">Stats over Time</string>
    <string name="heightTitle">Height</string>
    <string name="weightTitle">Weight</string>
    <string name="ageTitle">Age</string>
    <string name="bindRacesButtonName">Bind Races</string>
    <string name="saveButtonName">Save</string>
    <string name="cancelButtonName">Cancel</string>
    <string name="toDiaryButtonName">Diary</string>
    <string name="toStatisticsButtonName">Statistics</string>
    <string name="avDistanceValue">#NA</string>
    <string name="avTimeValue">#NA</string>
    <string name="avPaceValue">#NA</string>
    <string name="raceIDName">Race ID</string>
    <string name="currentSpeedValue">#NA MPH</string>
    <string name="currentPaceValue">#NA MPH</string>
    <string name="orientationTitleName">Orientation</string>
    <string name="unitTitleName">Units</string>
    <string name="orientationToggleButtonValueOn">Portrait</string>
    <string name="genderToggleButtonValueOn">Male</string>
    <string name="genderToggleButtonValueOff">Female</string>
    <string name="genderTitleValue">Gender</string>
    <string name="updateButtonName">Update</string>
    <string name="exportButtonName">Export</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="newUserText">Enter First and Last Name</string>
    <string name="newUserTitle">New User Creation</string>
    <string name="newUserHelp">Please view the settings page to add additional information about the user.</string>
    <string name="heightHint">cm</string>
    <string name="weightHint">kg</string>
    <string name="ageHint">years</string>
    <string name="orientationToggleButtonValueOff">Landscape</string>
    <string name="unitToggleButtonValueOn">Imperial</string>
    <string name="unitToggleButtonValueOff">Metric</string>
    <string name="dateFilterTextViewValue">#DATE</string>
    <string name="raceDate">Race Date</string>
    <string name="minuteEditTextHint">min</string>
    <string name="secondEditTextHint">sec</string>
    <string name="endActivityButton">End Activity</string>
    <string name="time">00 : 00 : 00</string>
    <string name="multiRaceTitle">Activity Selection</string>
</resources>