<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<TableLayout
		android:id="@+id/mainMenuTableLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" >

		<TableRow
			android:id="@+id/tableRow1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<Button
				android:id="@+id/newActivityButton"
				android:layout_width="160dip"
				android:layout_height="60dip"
				android:text="@string/newActivityButtonName" >
			</Button>

			<Button
				android:id="@+id/viewActivityButton"
				android:layout_width="160dip"
				android:layout_height="60dip"
				android:text="@string/viewActivityButtonName" >
			</Button>
		</TableRow>

		<TableRow
			android:id="@+id/tableRow2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<Button
				android:id="@+id/mapButton"
				android:layout_height="60dip"
				android:text="@string/mapButtonName" >
			</Button>

			<Button
				android:id="@+id/diaryButton"
				android:layout_height="60dip"
				android:text="@string/diaryButtonName" >
			</Button>
		</TableRow>

		<TableRow
			android:id="@+id/tableRow3"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<Button
				android:id="@+id/statisticsButton"
				android:layout_height="60dip"
				android:text="@string/statisticsButtonName" >
			</Button>

			<Button
				android:id="@+id/settingsButton"
				android:layout_height="60dip"
				android:text="@string/settingsButtonName" >
			</Button>
		</TableRow>
	</TableLayout>

	<Spinner
		android:id="@+id/userSpinner"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<Button
		android:id="@+id/newUserButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/newUserName" />

</LinearLayout>