<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <Gallery
        android:id="@+id/activityGallery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/totalDistanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"
        android:text="@string/totalDistanceValue"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/totalTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/totalDistanceTextView"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="19dp"
        android:text="@string/totalTimeValue"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/progressChartImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/statisticsProgressGraph"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/NumberOfRacesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/progressChartImageView"
        android:layout_below="@+id/progressChartImageView"
        android:layout_marginTop="22dp"
        android:text="@string/numberOfRacesValue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/averageDistanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalTimeTextView"
        android:layout_toRightOf="@+id/NumberOfRacesTextView"
        android:text="@string/averageDistanceValue"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/averageTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/totalTimeTextView"
        android:layout_alignBottom="@+id/totalTimeTextView"
        android:layout_toRightOf="@+id/NumberOfRacesTextView"
        android:text="@string/averageTimeValue"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/filterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/progressChartImageView"
        android:layout_below="@+id/activityGallery"
        android:layout_marginTop="27dp"
        android:text="Date Filter" />

    <RadioGroup
        android:id="@+id/filterRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filterTextView"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/filterAllRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="All" />

        <RadioButton
            android:id="@+id/filterMonthRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Month" />

        <RadioButton
            android:id="@+id/filterWeekRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Week" />

        <RadioButton
            android:id="@+id/filterDayRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Day" />
    </RadioGroup>

</RelativeLayout>